# dataflow

./: README.md  pyproject.toml
dataflow/: __init__.py  core.py  transforms.py  utils.py  validators.py
examples/: data_cleaning.py  simple_pipeline.py
tests/: test_core.py
