[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataflow-pipeline"
version = "0.1.0"
description = "A lightweight Python library for building composable data processing pipelines"
readme = "README.md"
authors = [{name = "John Theodorikakos", email = "john.theodorikakos@outlook.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.urls]
"Homepage" = ""

[tool.setuptools]
packages = ["dataflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"